# langsmith-tracing-integrations

./: .gitignore  README.md  pyproject.toml
claude-agent-sdk-demo/: .env.example  README.md  pyproject.toml
claude-agent-sdk-demo/agents/: __init__.py  agent.py
crewai-demo/: .env.example  .gitignore  README.md  pyproject.toml
crewai-demo/agents/: __init__.py  agent.py
google-adk-demo/: README.md  pyproject.toml
google-adk-demo/agents/: .env.example  __init__.py  agent.py
openai-agents-demo/: .env.example  README.md  pyproject.toml
openai-agents-demo/agents/: __init__.py  agent.py
